Added tables for trip data and swagger for login
